@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 11:28:26 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 11:29:41 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -114,5 +114,13 @@
   <description>音樂版權組織尋求與健身房合作解決方案韓國音樂著作權協會KOMCA計劃改善版權意識而不是對不遵守音樂版權法規的健身房業主採取法律行動該協會主席ChuGayeoul最近訪問了全國11個負責向健身房收取音樂版權費的中心收集現場投訴KOMCA認為創造一個...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 11:28:26 +0800</pubDate>
+</item><item>
+  <title>YG娛樂新人女團BABYMONSTER 7個月內再度出擊！11月發行首張正規專輯《Drip》，權志龍參與創作主打歌</title>
+  <link>https://www.famechos.me/news/YG娛樂新人女團BABYMONSTER 7個月內再度出擊！11月發行首張正規專輯《Drip》，權志龍參與創作主打歌.html</link>
+  <description>BABYMONSTER（韓語：베이비몬스터）11月發行首張正規專輯
+
+YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於11月1日發行首張正規專輯《Drip》，距離4月份出道僅僅7個月。該專輯的主打歌《Drip》由BIGBANG成員權志龍參與創作，預計將成為一首全民舞曲。該專輯共收錄9首歌曲，包括：。</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 11:29:41 +0800</pubDate>
 </item></channel>
 </rss>
