@@ -1,0 +1,269 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "YG\u5a1b\u6a02\u65b0\u4eba\u5973\u5718BABYMONSTER 7\u500b\u6708\u5167\u518d\u5ea6\u51fa\u64ca\uff0111\u6708\u767c\u884c\u9996\u5f35\u6b63\u898f\u5c08\u8f2f\u300aDrip\u300b\uff0c\u6b0a\u5fd7\u9f8d\u53c3\u8207\u5275\u4f5c\u4e3b\u6253\u6b4c", "description": "YG\u5a1b\u6a02\u65b0\u4eba\u5973\u5718BABYMONSTER 7\u500b\u6708\u5167\u518d\u5ea6\u51fa\u64ca\uff0111\u6708\u767c\u884c\u9996\u5f35\u6b63\u898f\u5c08\u8f2f\u300aDrip\u300b\uff0c\u6b0a\u5fd7\u9f8d\u53c3\u8207\u5275\u4f5c\u4e3b\u6253\u6b4c", "url": "https://www.famechos.me/news/YG\u5a1b\u6a02\u65b0\u4eba\u5973\u5718BABYMONSTER 7\u500b\u6708\u5167\u518d\u5ea6\u51fa\u64ca\uff0111\u6708\u767c\u884c\u9996\u5f35\u6b63\u898f\u5c08\u8f2f\u300aDrip\u300b\uff0c\u6b0a\u5fd7\u9f8d\u53c3\u8207\u5275\u4f5c\u4e3b\u6253\u6b4c.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-12T11:29:34.493893+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/YG娛樂新人女團BABYMONSTER 7個月內再度出擊！11月發行首張正規專輯《Drip》，權志龍參與創作主打歌.html"/>
+<meta name="description" content="YG娛樂新人女團BABYMONSTER強勢回歸！睽違7個月，BABYMONSTER宣布於11月發行首張正規專輯《Drip》，並由權志龍參與創作主打歌，引發歌迷高度期待。">
+
+<meta name="keywords" content="BABYMONSTER, YG娛樂, 權志龍, 首張正規專輯, Drip, KPOP, 韓國女團, 新人女團">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/YG娛樂新人女團BABYMONSTER 7個月內再度出擊！11月發行首張正規專輯《Drip》，權志龍參與創作主打歌.html" />
+        <meta property="og:title" content="YG娛樂新人女團BABYMONSTER 7個月內再度出擊！11月發行首張正規專輯《Drip》，權志龍參與創作主打歌" />
+        <meta property="og:description" content="YG娛樂新人女團BABYMONSTER 7個月內再度出擊！11月發行首張正規專輯《Drip》，權志龍參與創作主打歌" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="YG娛樂新人女團BABYMONSTER 7個月內再度出擊！11月發行首張正規專輯《Drip》，權志龍參與創作主打歌" />
+        <meta property="twitter:description" content="YG娛樂新人女團BABYMONSTER 7個月內再度出擊！11月發行首張正規專輯《Drip》，權志龍參與創作主打歌" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>YG娛樂新人女團BABYMONSTER 7個月內再度出擊！11月發行首張正規專輯《Drip》，權志龍參與創作主打歌</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">12/10/2024</p>
+        </div>
+	<p>YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於11月1日發行首張正規專輯《Drip》，距離4月份出道僅僅7個月。該專輯的主打歌《Drip》由BIGBANG成員權志龍參與創作，預計將成為一首全民舞曲。</p>
+<p>該專輯共收錄9首歌曲，包括：</p>
+<ul>
+<li>《Clik Clak》</li>
+<li>《Love, Maybe》</li>
+<li>《Really Like You》</li>
+<li>《Billionaire》</li>
+<li>《Woke Up In Tokyo (RUKA & ASA)》</li>
+<li>《FOREVER》</li>
+<li>《Batter Up (Remix) – Bonus Track》</li>
+</ul>
+<p>其中，《Clik Clak》被YG娛樂首席製作人楊賢碩描述為“與YG娛樂以往的作品截然不同”的嘻哈歌曲。</p>
+<p>楊賢碩在YG娛樂官方博客“YG Life”上表示，他對該專輯充滿期待，並稱之為一項特殊的項目。為了預熱該專輯，將在正式發行前每周預發兩首歌曲的1分鐘片段，但主打歌《Drip》將不會有任何預告。</p>
+<p>該團體還將發行至少三首音樂視頻，包括《Clik Clak》的音樂視頻，該視頻將在專輯發行前不久公開。</p>
+<p>自4月份出道以來，BABYMONSTER（韓語：베이비몬스터）已經取得了巨大的成功。首張迷你專輯《Babymons7er》在發行首周就賣出了40萬張，創下了K-pop女團出道專輯最高銷量的紀錄。主打歌《Sheesh》在YouTube上的播放量已經超過3億次，舞蹈視頻的播放量也超過了1.5億次。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/U7hwHp95m1k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-POP大爆炸！NCT DREAM、權志龍、BLACKPINK金珍妮、李知恩、Billlie強勢回歸，10月份演唱會巡迴、音樂新作齊發.html">K-POP大爆炸！NCT DREAM、權志龍、BLACKPINK金珍妮、李知恩、Billlie強勢回歸，10月份演唱會巡迴、音樂新作齊發</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-pop 偶像「假唱」爭議再起！舞台上究竟有多少真唱？.html">K-pop 偶像「假唱」爭議再起！舞台上究竟有多少真唱？</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-pop 四大天團齊發新專輯！TXT、aespa、THE BOYZ、Boynextdoor 盛大回歸，誰能稱霸樂壇？.html">K-pop 四大天團齊發新專輯！TXT、aespa、THE BOYZ、Boynextdoor 盛大回歸，誰能稱霸樂壇？</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
