@@ -152,4 +152,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/YG娛樂新人女團BABYMONSTER 7個月內再度出擊！11月發行首張正規專輯《Drip》，權志龍參與創作主打歌.html</ns0:loc>
+    <ns0:lastmod>2024-10-12T11:29:41+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
