@@ -22,3 +22,4 @@ https://www.koreaherald.com/view.php?ud=20241008050607
 https://tokyocheapo.com/entertainment/movies-theatre/kanda-myojin-show/
 https://www.koreaherald.com/view.php?ud=20241003050085
 https://www.koreaherald.com/view.php?ud=20241007050635
+https://www.koreaherald.com/view.php?ud=20241002050690
